2003-06-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormScrollViewEditor.m: Added -[destroyAndListSubviews]
	method to allow views within a NSScrollView to be ungrouped.
	* GormViewWithContentViewEditor.m: Added GormScrollViewEditor
	to list of classes to test for so that the ungroup method will
	proceed.
	Addresses bug #3536.
	
2003-06-07  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPrivate.h: Added declaration for GormDidModifyClassNotification
	* Gorm.m: Added definition for GormDidModifyClassNotification.  Also
	corrected an issue which was causing Gorm to crash when testing
	an interface.
	* GormClassManager.m: Added code to post the notification when
	an outlet or an action is added.
	* GormClassInspector.m: Added code to handleNotification
	GormDidModifyClassNotification so that the views in the 
	inspector can be properly updated when the class is edited in the
	class editor.

2003-06-07  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Added post of notification in 
	appropriate places.  Now sends IBInspectorDidModifyObjectNotification
	when the class is updated from the inspector.
	* GormDocument.m: Added check in handleNotification to
	process the new notification sent above.

2003-06-07  Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormClassInspector.gorm: Moved buttons into
	tab view.
	* GormClassInspector.[hm]: Added new methods and ivars for
	buttons in each tab view.
	* GormDocument.m: Added code to prevent addition of outlets
	to FirstResponder.
	* GormClassManager.m: Removed code which prevented adding
	actions to firstresponder.  MOSX is able to add actions, but not
	outlets to FirstResponder.  Aldo modified call made from
	parseHeader in the class manager to add all action to
	FirstResponder when importing the class.

2003-06-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormClassInspector.gorm: New inspector